# raq_qa_bot

./: Dockerfile  pyproject.toml
src/: entrypoint.sh  main.py  main.py~
