[tool.poetry]
name = "chatbot_frontend"
version = "0.1"
description = ""
authors = ["Yi-Cheng Wang <kirisame.wang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.79.0"
numpy = "^1.20.1"
runpod = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
